change odd design

--- a/lib/app_component.html
+++ b/lib/app_component.html
@@ -8,6 +8,7 @@
     <div class="array">
         <div class="cell" *ngFor="#c of cells" [value]="c">{{c}}</div>
     </div>
+    <h1>Result: {{result}}</h1>
     <div id="tree">
     </div>
 </div>
